--- a/Sending-Email-with-Node/views/contact.hbs
+++ b/Sending-Email-with-Node/views/contact.hbs
@@ -7,26 +7,27 @@
   <title>Acme Web Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="brand"><span>Acme</span> Web Design</h1>
+    <h1 class="brand"><span>Acme</span></h1>
     <div class="wrapper animated bounceInLeft">
       <div class="company-info">
-        <h3>Acme Web Design</h3>
+        <h3>The Web Design Company</h3>
         <ul>
-          <li><i class="fa fa-road"></i> 44 Something st</li>
+          <li><i class="fa fa-road"></i> 44 New Street</li>
           <li><i class="fa fa-phone"></i> (555) 555-5555</li>
-          <li><i class="fa fa-envelope"></i> test@acme.test</li>
+          <li><i class="fa fa-envelope"></i> webdesigncompany.com</li>
         </ul>
       </div>
       <div class="contact">
         <h3>Email Us</h3>
-        <form>
+        
+        <form method="POST" action="/">
           <p>
             <label>Name</label>
-            <input type="text" name="name">
+            <input type="text" name="name" required>
           </p>
           <p>
             <label>Company</label>
@@ -34,22 +35,29 @@
           </p>
           <p>
             <label>Email Address</label>
-            <input type="email" name="email">
+            <input type="email" name="email" required>
           </p>
           <p>
             <label>Phone Number</label>
-            <input type="text" name="phone">
+            <input type="text" name="phone" required>
           </p>
           <p class="full">
             <label>Message</label>
-            <textarea name="message" rows="5"></textarea>
+            <textarea name="message" rows="5" required></textarea>
           </p>
           <p class="full">
-            <button>Submit</button>
+            <button type="submit">Submit</button>
           </p>
         </form>
       </div>
     </div>
   </div>
+  <script>
+      
+      const message = "{{msg}}";
+      if(message){
+          alert(message)
+      }
+  </script>
 </body>
 </html>
